--- a/src/main/resources/public/scss/theme/default/_navigation.scss
+++ b/src/main/resources/public/scss/theme/default/_navigation.scss
@@ -104,7 +104,7 @@
             }
 
             &-area {
-              font-size: $menu-snb-font;
+              font-size: $menu-snb-font-size;
               font-weight: $font-weight-regular;
               color: $menu-color;
 
