--- a/src/main/resources/public/template/auth/authSearch.html
+++ b/src/main/resources/public/template/auth/authSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{auth.label.auth}"></h1>
-    <h6 class="description ml-2" th:text="#{auth.msg.editDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{auth.msg.editDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="text" class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue"  maxlength="100"
