--- a/src/main/resources/public/template/board/boardArticlesEdit.html
+++ b/src/main/resources/public/template/board/boardArticlesEdit.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{board.label.board}"></h1>
-    <h6 class="description ml-2" th:text="#{board.msg.editDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{board.msg.editDescription}"></h6>
 </div>
 <div layout:fragment="pageEdit">
     <div class="z-edit-form flex-fill">
