--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -12,7 +12,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{code.label.code}"></h1>
-    <h6 class="description ml-2" th:text="#{code.msg.editDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{code.msg.editDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="text" class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue" maxlength="100"
@@ -88,10 +88,10 @@
     </div>
     <template id="langCodeRowTemplate">
         <div class="z-edit-row flex-row align-items-center">
-            <label class="required mr-3" th:text="#{'code.label.lang'}"></label>
-            <div class="col-2 mr-5"><select></select></div>
-            <label class="required mr-3" th:text="#{code.label.codeValue}"></label>
-            <input class="z-input flex-fill mr-3" type="text" name="codeLangValue" maxlength="100">
+            <label class="required" th:text="#{'code.label.lang'}"></label>
+            <div class="col-2 ml-3 mr-5"><select></select></div>
+            <label class="required" th:text="#{code.label.codeValue}"></label>
+            <input class="z-input flex-fill ml-3 mr-3" type="text" name="codeLangValue" maxlength="100">
             <button class="z-button-icon extra">
                 <span class="z-icon i-delete"></span>
             </button>
