--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -8,7 +8,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{token.label.list}"></h1>
-    <h6 class="description ml-2" th:text="#{dashboard.msg.viewDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{dashboard.msg.viewDescription}"></h6>
 </div>
 <div layout:fragment="pageSearchResult">
     <h3 class="sub-title">업무통계</h3>
