--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -11,7 +11,7 @@
     <div class="z-faq-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{faq.label.faq}"></h1>
-            <h6 class="description ml-2" th:text="#{faq.msg.viewDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{faq.msg.viewDescription}"></h6>
         </div>
     </div>
 </th:block>
