--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.old.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.old.html
@@ -11,7 +11,7 @@
     <div class="z-numbering-rule-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{rule.label.rule}"></h1>
-            <h6 class="description ml-2" th:text="#{rule.msg.editDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{rule.msg.editDescription}"></h6>
         </div>
         <div class="z-main-header-search flex-row">
             <input type="text" class="z-input i-search col-5 mr-2" id="search" name="search" maxlength="100"
