--- a/src/main/resources/public/template/portal/faq/portalFaq.html
+++ b/src/main/resources/public/template/portal/faq/portalFaq.html
@@ -10,7 +10,7 @@
     <div class="z-content-header">
         <div class="z-page-title flex-row align-items-baseline">
             <h1 th:text="#{faq.label.faq}"></h1>
-            <h6 class="description ml-2" th:text="#{faq.msg.portalDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{faq.msg.portalDescription}"></h6>
         </div>
         <div class="z-page-search">
             <select id="groupCode" name="groupCode" onchange="getFaqList(this.value, '')" class="col-5 mr-2">
