--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -12,7 +12,7 @@
         <div class="notice-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{notice.label.notice}"></h1>
-                <h6 class="description ml-2" th:text="#{notice.msg.viewDescription}"></h6>
+                <h6 class="description ml-2 pl-2" th:text="#{notice.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="notice-content">
