--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{scheduler.label.schedule}"></h1>
-    <h6 class="description ml-2" th:text="#{scheduler.msg.scheduleDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{scheduler.msg.scheduleDescription}"></h6>
 </div>
 <div layout:fragment="pageEdit">
     <div class="z-edit-form flex-fill">
