--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1311,7 +1311,7 @@ input, button, select, optgroup, textarea {
   color: #222529;
   padding-bottom: 0.625rem;
   margin-bottom: 0.625rem;
-  border-bottom: 0.125rem solid #E1E3E6;
+  border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
 }
 .portal-container .download-content .view-sub-title {
   font-size: 1rem;
@@ -1578,8 +1578,8 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   outline: 0;
   border: 0.0625rem solid #2578CE;
 }
-.z-input:read-only:not(.tagify) {
-  background-color: #FFFFFF;
+.z-input:read-only:not(:disabled):not(.tagify) {
+  background-color: transparent;
   background-image: none;
   border: none;
   border-left: 0.0625rem solid #ABB0B5;
@@ -1719,8 +1719,8 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   outline: 0;
   border: 0.0625rem solid #2578CE;
 }
-.z-textarea:read-only:not(.os-host-textarea) {
-  background-color: #FFFFFF;
+.z-textarea:read-only:not(:disabled):not(.os-host-textarea) {
+  background-color: transparent;
   border: none;
   border-left: 0.0625rem solid #ABB0B5;
   border-radius: 0;
@@ -1919,7 +1919,7 @@ select {
   transform: rotate(90deg);
 }
 .z-select .z-select-box.readonly {
-  background-color: #FFFFFF;
+  background-color: transparent;
   border: none;
   border-left: 0.0625rem solid #ABB0B5;
   border-radius: 0;
@@ -2083,7 +2083,7 @@ select {
   text-align: center;
   margin-left: 2%;
 }
-.z-slider .z-input:read-only {
+.z-slider .z-input:read-only:not(:disabled) {
   border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
@@ -4135,14 +4135,14 @@ table tbody tr:hover {
 .avatar-edit .avatar-title {
   font-size: 0.875rem;
   font-weight: 500;
-  color: #3F4B56;
+  color: #8B9094;
   margin: 0.5625rem 0 0.5625rem 0;
 }
 .avatar-edit .avatar {
   width: 20.63rem;
   height: 20.63rem;
   background-color: #FAFAFA;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid #CFD5D9;
   padding: 0;
 }
 .avatar-edit .avatar .dz-default {
@@ -4153,11 +4153,11 @@ table tbody tr:hover {
   font-weight: 400;
   color: #ABB0B5;
   text-align: center;
-  margin-top: 85px;
+  margin-top: 5.313rem;
 }
 .avatar-edit .avatar .dz-default.dz-message .z-icon.i-avatar {
   width: 100%;
-  height: 3.75rem;
+  height: 5rem;
   -webkit-mask-image: url("../media/icons/fileUploader/icon_avatar.svg");
   mask-image: url("../media/icons/fileUploader/icon_avatar.svg");
   -webkit-mask-repeat: no-repeat;
@@ -4226,7 +4226,7 @@ table tbody tr:hover {
   align-items: center;
   line-height: 150%;
   text-align: center;
-  color: rgba(0, 0, 0, 0.9);
+  color: #8B9094;
   opacity: 0;
   z-index: 10;
 }
@@ -4243,7 +4243,7 @@ table tbody tr:hover {
   width: 1.125rem;
   height: 1.125rem;
   background-image: url("../media/icons/icon_clear.svg");
-  background-size: 0.875rem;
+  background-size: 1.125rem;
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: center;
