--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -80,7 +80,10 @@
           table {
             width: 100%;
             .z-list-head {
-              tr { @include border(calc(#{$cmdb-ci-attribute-list-border-width} * 2), solid, $cmdb-ci-attribute-list-border-color, bottom); }
+              tr {
+                color: $list-head-font-color;
+                @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
+              }
             }
             .z-list-body {
               display: block;
@@ -95,6 +98,11 @@
                 & > td {
                   display: inline-block; // 말줄임 적용을 위해 추가
                   vertical-align: middle;
+                  // 태그
+                  .tag-group {
+                    display: initial;
+                    line-height: 1.2;
+                  }
                 }
               }
             }
