--- a/src/main/resources/public/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/scss/theme/default/_modal.scss
@@ -12,17 +12,16 @@
         margin-top: 2.188rem; // 35px
         table {
           width: 100%;
-          .list-head {
+          .z-list-head {
             tr {
-              @include border(0.125rem, solid, map-get($grays, "default"), bottom);
-              color: map-get($blacks, "light");
+              color: $list-head-font-color;
+              @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
             }
           }
-          .list-body {
+          .z-list-body {
             display: block;
             width: 60rem; // 960px
             height: 21.75rem; // 348px
-            color: map-get($grays, "dark");
             overflow-y: auto;
             .list-row {
               display: table;
@@ -142,8 +141,9 @@
           tr {
             th, td {
               font-weight: $font-weight-regular;
-              font-size: 1rem; // 16px
+              font-size: $font-size-s; // 16px
               padding: 0 1.5rem 0.625rem 0; // 0 24px 10px 0
+              overflow: initial; // selectbox 짤림 현상 방지
             }
             th {
               &.column-title {
@@ -178,17 +178,16 @@
           margin-top: 2.188rem; // 35px
           table {
             width: 100%;
-            .list-head {
+            .z-list-head {
               tr {
-                color: map-get($blacks, "light");
-                @include border(0.125rem, solid, map-get($grays, "default"), bottom);
+                color: $list-head-font-color;
+                @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
               }
             }
-            .list-body {
+            .z-list-body {
               display: block;
               width: 60rem; // 960px
               height: 32.8125rem; // 525px
-              color: map-get($grays, "dark");
               overflow-y: auto;
               .attribute-list,
               .instance-list {
@@ -221,6 +220,8 @@
         height: calc(#{$chart-edit-modal-height} - #{$modal-header-height} - #{$modal-bottom-height} - 3.125rem); // 높이에서 여백만큼 빼준다.
         padding: 0 1.25rem; // 0 20px
         overflow-y: auto;
+
+        label { margin: 0.625rem 0; } // 10px 0
       }
     }
   }
@@ -277,15 +278,14 @@
         .ci-list {
           table {
             width: 100%;
-            .list-head {
+            .z-list-head {
               tr {
-                color: map-get($blacks, "light");
-                @include border(0.125rem, solid, map-get($grays, "default"), bottom);
+                color: $list-head-font-color;
+                @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
               }
             }
-            .list-body {
+            .z-list-body {
               display: block;
-              color: map-get($grays, "dark");
               overflow-y: auto;
               .list-row {
                 display: table;
@@ -307,7 +307,10 @@
         table {
           width: 100%;
           .z-list-head {
-            tr { @include border(calc(#{$cmdb-ci-attribute-list-border-width} * 2), solid, $cmdb-ci-attribute-list-border-color, bottom); }
+            tr {
+              color: $list-head-font-color;
+              @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
+            }
           }
           .z-list-body {
             display: block;
@@ -340,6 +343,7 @@
       border-color: $product-info-modal-content-border-color;
       label {
         color: $product-info-modal-content-color;
+        margin: 0.625rem 0;  // 10px 0
       }
       .i-logo {
         height: $product-info-modal-content-icon-height;
