--- a/src/main/resources/public/scss/theme/default/_popup.scss
+++ b/src/main/resources/public/scss/theme/default/_popup.scss
@@ -7,20 +7,10 @@
   width: 100%;
   height: 100vh;
   padding: 1.875rem 2.5rem 1.25rem 2.5rem; // 30px 40px 20px 40px
-  background-color: $white;
+  background-color: $popup-bg-color;
 
   .popup-title {
     margin-bottom: 1.75rem; //26px
-    color: $view-sub-title-font-color;
-  }
-
-  &-btn-content {
-    margin-top: 2rem; //32px
-    @include border(0.0625rem, solid, map-get($grays, "default"), top); //1px
-  }
-
-  &-button-list {
-    margin-top: 1.25rem; //20px
   }
 
   @include defaultViewTemplate();
