--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{board.label.board}"></h1>
-    <h6 class="description ml-2" th:text="#{board.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{board.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <form id="searchFrm">
