--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -11,7 +11,7 @@
     <div class="z-board-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{board.label.board}"></h1>
-            <h6 class="description ml-2" th:text="#{board.msg.viewDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{board.msg.viewDescription}"></h6>
         </div>
     </div>
 </th:block>
