--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -11,7 +11,7 @@
     <div class="z-board-admin-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{board.label.board}"></h1>
-            <h6 class="description ml-2" th:text="#{board.msg.adminEditDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{board.msg.adminEditDescription}"></h6>
         </div>
     </div>
 </th:block>
