--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{board.label.board}"></h1>
-    <h6 class="description ml-2" th:text="#{board.msg.adminSearchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{board.msg.adminSearchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('board.admin.update')" th:name="isRole"
