--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -18,7 +18,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{chart.label.chartList}"></h1>
-    <h6 class="description ml-2" th:text="#{chart.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{chart.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
