--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{cmdb.attribute.label.management}"></h1>
-    <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{cmdb.attribute.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('cmdb.attribute.create') || hasAuthority('cmdb.attribute.update')" th:name="isRole"
