--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -11,7 +11,7 @@
     <div class="z-cmdb-attribute-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{cmdb.attribute.label.view}"></h1>
-            <h6 class="description ml-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{cmdb.attribute.msg.viewDescription}"></h6>
         </div>
     </div>
 </th:block>
