--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -12,7 +12,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{cmdb.ci.label.ciInquiry}"></h1>
-    <h6 class="description ml-2" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('cmdb.ci.create') || hasAuthority('cmdb.ci.update')"
