--- a/src/main/resources/public/template/cmdb/ci/ciViewModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciViewModal.html
@@ -27,7 +27,7 @@
             </div>
             <!-- 아이콘 -->
             <div class="flex-column view-row">
-                <label class="field-label" for="typeIcon">
+                <label class="field-label">
                     <span th:text="#{cmdb.type.label.icon}"></span>
                 </label>
                 <div class="flex-row input-button">
