--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{customCode.label.customCode}"></h1>
-    <h6 class="description ml-2" th:text="#{customCode.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{customCode.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('custom.code.update')" th:name="isRole" th:value="true"/>
