--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -107,7 +107,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{document.label.document}"></h1>
-    <h6 class="description ml-2" th:text="#{document.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{document.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <form id="searchDocumentsFrm">
