--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{download.label.download}"></h1>
-    <h6 class="description ml-2" th:text="#{download.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{download.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" name="isRole" sec:authorize="hasAuthority('download.update')" th:value="true"/>
