--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -10,7 +10,7 @@
     <div class="z-download-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{download.label.download}"></h1>
-            <h6 class="description ml-2" th:text="#{download.msg.viewDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{download.msg.viewDescription}"></h6>
         </div>
     </div>
 </th:block>
