--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{faq.label.faq}"></h1>
-    <h6 class="description ml-2" th:text="#{faq.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{faq.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <form id="searchFrm">
