--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -13,7 +13,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{form.label.form}"></h1>
-    <h6 class="description ml-2" th:text="#{form.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{form.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''form.update'')')}"/>
@@ -334,7 +334,7 @@
                        `<div id="dropZoneFiles"></div>` +
                        `<div id="dropZoneUploadedFiles"></div>` +
                    `</div>` +
-                   `<h6 class="description">${i18n.msg('process.msg.noticeImportFile')}</h6>` +
+                   `<h6 class="description pl-2">${i18n.msg('process.msg.noticeImportFile')}</h6>` +
                 `</div>`;
     }
 
