--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -8,7 +8,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{image.label.list}"></h1>
-    <h6 class="description ml-2" th:text="#{image.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{image.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="text" class="z-input i-search col-5 mr-2" id="searchValue" name="searchValue" maxlength="100" th:placeholder="#{image.label.name}"/>
