--- a/src/main/resources/public/template/numbering-rule/numberingRuleView.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleView.html
@@ -10,7 +10,7 @@
     <div class="z-numbering-rule-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{rule.label.rule}"></h1>
-            <h6 class="description ml-2" th:text="#{rule.msg.editDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{rule.msg.editDescription}"></h6>
         </div>
     </div>
 </th:block>
