--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -12,7 +12,7 @@
         <div class="download-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{download.label.download}"></h1>
-                <h6 class="description ml-2" th:text="#{download.msg.viewDescription}"></h6>
+                <h6 class="description ml-2 pl-2" th:text="#{download.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="download-content">
