--- a/src/main/resources/public/template/report/reportTemplateEdit.html
+++ b/src/main/resources/public/template/report/reportTemplateEdit.html
@@ -11,7 +11,7 @@
     <div class="z-report-template-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{report.label.template}"></h1>
-            <h6 class="description ml-2" th:text="#{report.msg.editDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{report.msg.editDescription}"></h6>
         </div>
     </div>
 </th:block>
