--- a/src/main/resources/public/template/report/reportTemplateSearch.html
+++ b/src/main/resources/public/template/report/reportTemplateSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{menu.report.template}"></h1>
-    <h6 class="description ml-2" th:text="#{report.msg.configDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{report.msg.configDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('report.create') || hasAuthority('report.update')"
