--- a/src/main/resources/public/template/report/reportTemplateView.html
+++ b/src/main/resources/public/template/report/reportTemplateView.html
@@ -12,7 +12,7 @@
         <div class="report-template-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{report.label.template}"></h1>
-                <h6 class="description ml-2" th:text="#{report.msg.editDescription}"></h6>
+                <h6 class="description ml-2 pl-2" th:text="#{report.msg.editDescription}"></h6>
             </div>
         </div>
         <div class="report-template-content-edit">
