--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{role.label.role}"></h1>
-    <h6 class="description ml-2" th:text="#{role.msg.editDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{role.msg.editDescription}"></h6>
 </div>
 <div layout:fragment="pageEdit">
     <div class="z-edit-form flex-fill">
@@ -34,7 +34,7 @@
                     <label th:text="#{role.label.auth}" class="required"></label>
                 </div>
                 <div class="ml-auto">
-                    <label class="z-checkbox z-checkbox-all">
+                    <label class="z-checkbox z-checkbox-all p1-1">
                         <input type="checkbox" id="selectAll" name="selectAll" onclick="selectAll()"/>
                         <span></span>
                         <span class="z-label" th:text="#{role.btn.selectAll}"/>
