--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{scheduler.label.scheduler}"></h1>
-    <h6 class="description ml-2" th:text="#{scheduler.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{scheduler.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" sec:authorize="hasAuthority('scheduler.create') || hasAuthority('scheduler.update')"
