--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -11,7 +11,7 @@
     <div class="z-user-header">
         <div class="z-main-header-title flex-row align-items-baseline">
             <h1 th:text="#{user.label.editUserInfo}"></h1>
-            <h6 class="description ml-2" th:text="#{user.msg.editSelfDescription}"></h6>
+            <h6 class="description ml-2 pl-2" th:text="#{user.msg.editSelfDescription}"></h6>
         </div>
     </div>
 </th:block>
@@ -84,7 +84,7 @@
                             <input type="text" class="z-input" id="position" name="position" th:value="${users?.position}" maxlength="100">
                         </div>
                         <div class="flex-column z-edit-row">
-                            <label th:text="#{user.label.department}" for="department"></label>
+                            <label th:text="#{user.label.department}"></label>
                             <div class="flex-row z-input-button">
                                 <input type="hidden" id="departmentCode" name="departmentCode" th:value="${deptCodeDetail?.code}"/>
                                 <input type="text" class="z-input col-5" id="department" name="department" th:value="${deptCodeDetail?.codeValue}" readonly>
