--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -9,10 +9,10 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{user.label.user}"></h1>
-    <h6 class="description ml-2" th:text="#{user.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{user.msg.searchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
-    <input class="z-input i-search col-5 mr-2" id="searchValue" type="text" maxlength="100"
+    <input class="z-input i-search col-5 mr-2 pl-2" id="searchValue" type="text" maxlength="100"
            th:placeholder="#{user.label.searchPlaceholder}"/>
     <th:block th:replace="layout/itsm/fragment/totalCountFragment :: totalCountFragment"></th:block>
     <div class="ml-auto">
