--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -12,7 +12,7 @@
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{document.label.businessFlow}"></h1>
-    <h6 class="description ml-2" th:text="#{document.msg.adminSearchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{document.msg.adminSearchDescription}"></h6>
 </div>
 <div layout:fragment="pageSearching">
     <input type="hidden" id="updatable" th:value="${#authorization.expression('hasAuthority(''document.admin.update'')')}"/>
